# AggreQuant_v2.0

./: .gitignore  PROGRESS.md  PROJECT.md  README.md  presentation.html  pyproject.toml
aggrequant/: __init__.py  colocalization.py  focus.py  pipeline.bak.py  pipeline.py
aggrequant/common/: __init__.py  cli_utils.py  gpu_utils.py  image_utils.py  logging.py
aggrequant/gui_web/: __init__.py  app.py  config.py  runner.py
aggrequant/loaders/: __init__.py  config.py  images.py  plate.py
aggrequant/nn/: __init__.py  inference.py  utils.py
aggrequant/quality/: __init__.py  focus.py
aggrequant/quantification/: __init__.py  measurements.py  results.py
aggrequant/segmentation/: __init__.py  base.py  cellpose.py  postprocessing.py  stardist.py
aggrequant/statistics/: __init__.py  controls.py  export.py  well_stats.py
aggrequant/visualization/: __init__.py  heatmaps.py  qc_plots.py
benchmarks/: model_selection_rationale.md
benchmarks/cell_segmentation/: BENCHMARK_PLAN.md  README.md  dependency_check.md  literature_review.md  plot_masks.py  plot_results.py  requirements_frozen.txt  requirements_frozen_pre_cellsam.txt  run_benchmark.py  supplementary.md
benchmarks/mini_cellpose_from_scratch/: README.md  dataset.py  dynamics.py  environment.yml  model.py  predict.py  train.py
benchmarks/nuclei_segmentation/: NORMALIZATION_EVALUATION.md  NORMALIZATION_REEVAL_STARDIST_CELLPOSE.md  README.md  analyze_intensity_detection.py  compare_normalization.py  run_benchmark.py  viewer.py  (+1 more)
configs/: README.md  plate1_384well.yaml  test_384well.yaml
devlog/: Plan_2026-02-17.md  Plan_2026-02-18.md  Plan_2026-03-04.md  Plan_2026-03-10.md  Plan_2026-03-12.md  Plan_2026-03-16.md  Plan_2026-03-17.md  README.md  restructure.md
docs/: focus_metrics_extended_literature_review.md  focus_metrics_literature_review.md
gui/: __init__.py  app.py  pipeline_runner.py
manuscript/: Makefile  focus_quality_section.tex  main.tex  references.bib
nuclei_segmentation/: BENCHMARK_PLAN.md  README.md  WORK_STATUS.md  mask_visualization_options.md  paper_text_image_selection.md  plot_masks.py  plot_results.py  requirements_frozen.txt  requirements_viewer.txt  select_images.py  viewer.py
scripts/: benchmark_focus.py  benchmark_nuclei.py  compare_predictions.py  fig2_dl_vs_filter.py  fig4_biological_validation.py  plot_training.py  predict_and_plot.py  run_gui.py  run_pipeline.py  run_plate_analysis.py  run_segmentation.py  test_cellpose_only.py  test_image_detection.py  test_minimal_pipeline.py  test_pipeline.py  train_ablation.py  train_baseline.py  train_loss_comparison.py
tests/: __init__.py  conftest.py
(+87 files in other folders)
